src/grammar/.antlr/HLangParser.py
# Generated from c://Users//PC//hlang-compiler//src//grammar//HLang.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class HLangParser ( Parser ):

    grammarFileName = "HLang.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'bool'", "'break'", "'const'", "'continue'", 
                     "'else'", "'false'", "'float'", "'for'", "'func'", 
                     "'if'", "'in'", "'int'", "'let'", "'return'", "'string'", 
                     "'true'", "'void'", "'while'", "'+'", "'-'", "'*'", 
                     "'/'", "'%'", "'=='", "'!='", "'<'", "'<='", "'>'", 
                     "'>='", "'&&'", "'||'", "'!'", "'='", "':'", "'->'", 
                     "'>>'", "'('", "')'", "'{'", "'}'", "'['", "']'", "','", 
                     "';'", "'.'" ]

    symbolicNames = [ "<INVALID>", "BOOL", "BREAK", "CONST", "CONTINUE", 
                      "ELSE", "FALSE", "FLOAT", "FOR", "FUNC", "IF", "IN", 
                      "INT", "LET", "RETURN", "STRING", "TRUE", "VOID", 
                      "WHILE", "ADD", "SUB", "MUL", "DIV", "MOD", "EQUAL", 
                      "UNEQUAL", "LT", "LTE", "GT", "GTE", "AND", "OR", 
                      "NOT", "ASSIGN", "COLON", "ARROW", "PIPELINE", "LP", 
                      "RP", "LCP", "RCP", "LSP", "RSP", "COMMA", "SEMICOLON", 
                      "DOT", "ID", "INT_LIT", "FLOAT_LIT", "STRING_LIT", 
                      "WS", "NEWLINE", "COMMENT_LINE", "COMMENT", "UNCLOSE_STRING", 
                      "ILLEGAL_ESCAPE", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_decl = 1
    RULE_constdecl = 2
    RULE_vardecl = 3
    RULE_funcdecl = 4
    RULE_var_type = 5
    RULE_ret_type = 6
    RULE_non_void_type = 7
    RULE_array_type = 8
    RULE_idlist = 9
    RULE_paramdecl = 10
    RULE_paramlist = 11
    RULE_param = 12
    RULE_body = 13
    RULE_stmt = 14
    RULE_breakstmt = 15
    RULE_continuestmt = 16
    RULE_blockstmt = 17
    RULE_for_stmt = 18
    RULE_while_stmt = 19
    RULE_if_stmt = 20
    RULE_else_stmt = 21
    RULE_assignment = 22
    RULE_lhs = 23
    RULE_callstmt = 24
    RULE_returnstmt = 25
    RULE_exprstmt = 26
    RULE_expr = 27
    RULE_expr1 = 28
    RULE_expr2 = 29
    RULE_expr3 = 30
    RULE_expr4 = 31
    RULE_expr5 = 32
    RULE_expr6 = 33
    RULE_expr7 = 34
    RULE_expr8 = 35
    RULE_expr9 = 36
    RULE_primary_expr = 37
    RULE_callexpr = 38
    RULE_callee = 39
    RULE_builtin_func = 40
    RULE_array_lit = 41
    RULE_exprlist = 42

    ruleNames =  [ "program", "decl", "constdecl", "vardecl", "funcdecl", 
                   "var_type", "ret_type", "non_void_type", "array_type", 
                   "idlist", "paramdecl", "paramlist", "param", "body", 
                   "stmt", "breakstmt", "continuestmt", "blockstmt", "for_stmt", 
                   "while_stmt", "if_stmt", "else_stmt", "assignment", "lhs", 
                   "callstmt", "returnstmt", "exprstmt", "expr", "expr1", 
                   "expr2", "expr3", "expr4", "expr5", "expr6", "expr7", 
                   "expr8", "expr9", "primary_expr", "callexpr", "callee", 
                   "builtin_func", "array_lit", "exprlist" ]

    EOF = Token.EOF
    BOOL=1
    BREAK=2
    CONST=3
    CONTINUE=4
    ELSE=5
    FALSE=6
    FLOAT=7
    FOR=8
    FUNC=9
    IF=10
    IN=11
    INT=12
    LET=13
    RETURN=14
    STRING=15
    TRUE=16
    VOID=17
    WHILE=18
    ADD=19
    SUB=20
    MUL=21
    DIV=22
    MOD=23
    EQUAL=24
    UNEQUAL=25
    LT=26
    LTE=27
    GT=28
    GTE=29
    AND=30
    OR=31
    NOT=32
    ASSIGN=33
    COLON=34
    ARROW=35
    PIPELINE=36
    LP=37
    RP=38
    LCP=39
    RCP=40
    LSP=41
    RSP=42
    COMMA=43
    SEMICOLON=44
    DOT=45
    ID=46
    INT_LIT=47
    FLOAT_LIT=48
    STRING_LIT=49
    WS=50
    NEWLINE=51
    COMMENT_LINE=52
    COMMENT=53
    UNCLOSE_STRING=54
    ILLEGAL_ESCAPE=55
    ERROR_CHAR=56

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(HLangParser.EOF, 0)

        def decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HLangParser.DeclContext)
            else:
                return self.getTypedRuleContext(HLangParser.DeclContext,i)


        def getRuleIndex(self):
            return HLangParser.RULE_program




    def program(self):

        localctx = HLangParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 89
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==3 or _la==9:
                self.state = 86
                self.decl()
                self.state = 91
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 92
            self.match(HLangParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def constdecl(self):
            return self.getTypedRuleContext(HLangParser.ConstdeclContext,0)


        def funcdecl(self):
            return self.getTypedRuleContext(HLangParser.FuncdeclContext,0)


        def getRuleIndex(self):
            return HLangParser.RULE_decl




    def decl(self):

        localctx = HLangParser.DeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_decl)
        try:
            self.state = 96
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [3]:
                self.enterOuterAlt(localctx, 1)
                self.state = 94
                self.constdecl()
                pass
            elif token in [9]:
                self.enterOuterAlt(localctx, 2)
                self.state = 95
                self.funcdecl()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConstdeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CONST(self):
            return self.getToken(HLangParser.CONST, 0)

        def ID(self):
            return self.getToken(HLangParser.ID, 0)

        def ASSIGN(self):
            return self.getToken(HLangParser.ASSIGN, 0)

        def expr(self):
            return self.getTypedRuleContext(HLangParser.ExprContext,0)


        def SEMICOLON(self):
            return self.getToken(HLangParser.SEMICOLON, 0)

        def COLON(self):
            return self.getToken(HLangParser.COLON, 0)

        def var_type(self):
            return self.getTypedRuleContext(HLangParser.Var_typeContext,0)


        def getRuleIndex(self):
            return HLangParser.RULE_constdecl




    def constdecl(self):

        localctx = HLangParser.ConstdeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_constdecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            self.match(HLangParser.CONST)
            self.state = 99
            self.match(HLangParser.ID)
            self.state = 102
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==34:
                self.state = 100
                self.match(HLangParser.COLON)
                self.state = 101
                self.var_type()


            self.state = 104
            self.match(HLangParser.ASSIGN)
            self.state = 105
            self.expr()
            self.state = 106
            self.match(HLangParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VardeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LET(self):
            return self.getToken(HLangParser.LET, 0)

        def ID(self):
            return self.getToken(HLangParser.ID, 0)

        def ASSIGN(self):
            return self.getToken(HLangParser.ASSIGN, 0)

        def expr(self):
            return self.getTypedRuleContext(HLangParser.ExprContext,0)


        def SEMICOLON(self):
            return self.getToken(HLangParser.SEMICOLON, 0)

        def COLON(self):
            return self.getToken(HLangParser.COLON, 0)

        def var_type(self):
            return self.getTypedRuleContext(HLangParser.Var_typeContext,0)


        def getRuleIndex(self):
            return HLangParser.RULE_vardecl




    def vardecl(self):

        localctx = HLangParser.VardeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_vardecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            self.match(HLangParser.LET)
            self.state = 109
            self.match(HLangParser.ID)
            self.state = 112
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==34:
                self.state = 110
                self.match(HLangParser.COLON)
                self.state = 111
                self.var_type()


            self.state = 114
            self.match(HLangParser.ASSIGN)
            self.state = 115
            self.expr()
            self.state = 116
            self.match(HLangParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncdeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNC(self):
            return self.getToken(HLangParser.FUNC, 0)

        def ID(self):
            return self.getToken(HLangParser.ID, 0)

        def paramdecl(self):
            return self.getTypedRuleContext(HLangParser.ParamdeclContext,0)


        def ARROW(self):
            return self.getToken(HLangParser.ARROW, 0)

        def ret_type(self):
            return self.getTypedRuleContext(HLangParser.Ret_typeContext,0)


        def body(self):
            return self.getTypedRuleContext(HLangParser.BodyContext,0)


        def getRuleIndex(self):
            return HLangParser.RULE_funcdecl




    def funcdecl(self):

        localctx = HLangParser.FuncdeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_funcdecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self.match(HLangParser.FUNC)
            self.state = 119
            self.match(HLangParser.ID)
            self.state = 120
            self.paramdecl()
            self.state = 121
            self.match(HLangParser.ARROW)
            self.state = 122
            self.ret_type()
            self.state = 123
            self.body()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def non_void_type(self):
            return self.getTypedRuleContext(HLangParser.Non_void_typeContext,0)


        def getRuleIndex(self):
            return HLangParser.RULE_var_type




    def var_type(self):

        localctx = HLangParser.Var_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_var_type)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 125
            self.non_void_type()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Ret_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def non_void_type(self):
            return self.getTypedRuleContext(HLangParser.Non_void_typeContext,0)


        def VOID(self):
            return self.getToken(HLangParser.VOID, 0)

        def getRuleIndex(self):
            return HLangParser.RULE_ret_type




    def ret_type(self):

        localctx = HLangParser.Ret_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_ret_type)
        try:
            self.state = 129
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1, 7, 12, 15, 41]:
                self.enterOuterAlt(localctx, 1)
                self.state = 127
                self.non_void_type()
                pass
            elif token in [17]:
                self.enterOuterAlt(localctx, 2)
                self.state = 128
                self.match(HLangParser.VOID)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Non_void_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(HLangParser.INT, 0)

        def FLOAT(self):
            return self.getToken(HLangParser.FLOAT, 0)

        def BOOL(self):
            return self.getToken(HLangParser.BOOL, 0)

        def STRING(self):
            return self.getToken(HLangParser.STRING, 0)

        def array_type(self):
            return self.getTypedRuleContext(HLangParser.Array_typeContext,0)


        def getRuleIndex(self):
            return HLangParser.RULE_non_void_type




    def non_void_type(self):

        localctx = HLangParser.Non_void_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_non_void_type)
        try:
            self.state = 136
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [12]:
                self.enterOuterAlt(localctx, 1)
                self.state = 131
                self.match(HLangParser.INT)
                pass
            elif token in [7]:
                self.enterOuterAlt(localctx, 2)
                self.state = 132
                self.match(HLangParser.FLOAT)
                pass
            elif token in [1]:
                self.enterOuterAlt(localctx, 3)
                self.state = 133
                self.match(HLangParser.BOOL)
                pass
            elif token in [15]:
                self.enterOuterAlt(localctx, 4)
                self.state = 134
                self.match(HLangParser.STRING)
                pass
            elif token in [41]:
                self.enterOuterAlt(localctx, 5)
                self.state = 135
                self.array_type()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Array_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LSP(self):
            return self.getToken(HLangParser.LSP, 0)

        def non_void_type(self):
            return self.getTypedRuleContext(HLangParser.Non_void_typeContext,0)


        def SEMICOLON(self):
            return self.getToken(HLangParser.SEMICOLON, 0)

        def INT_LIT(self):
            return self.getToken(HLangParser.INT_LIT, 0)

        def RSP(self):
            return self.getToken(HLangParser.RSP, 0)

        def getRuleIndex(self):
            return HLangParser.RULE_array_type




    def array_type(self):

        localctx = HLangParser.Array_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_array_type)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 138
            self.match(HLangParser.LSP)
            self.state = 139
            self.non_void_type()
            self.state = 140
            self.match(HLangParser.SEMICOLON)
            self.state = 141
            self.match(HLangParser.INT_LIT)
            self.state = 142
            self.match(HLangParser.RSP)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdlistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(HLangParser.ID)
            else:
                return self.getToken(HLangParser.ID, i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(HLangParser.COMMA)
            else:
                return self.getToken(HLangParser.COMMA, i)

        def getRuleIndex(self):
            return HLangParser.RULE_idlist




    def idlist(self):

        localctx = HLangParser.IdlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_idlist)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 144
            self.match(HLangParser.ID)
            self.state = 149
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==43:
                self.state = 145
                self.match(HLangParser.COMMA)
                self.state = 146
                self.match(HLangParser.ID)
                self.state = 151
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamdeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LP(self):
            return self.getToken(HLangParser.LP, 0)

        def RP(self):
            return self.getToken(HLangParser.RP, 0)

        def paramlist(self):
            return self.getTypedRuleContext(HLangParser.ParamlistContext,0)


        def getRuleIndex(self):
            return HLangParser.RULE_paramdecl




    def paramdecl(self):

        localctx = HLangParser.ParamdeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_paramdecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 152
            self.match(HLangParser.LP)
            self.state = 154
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==46:
                self.state = 153
                self.paramlist()


            self.state = 156
            self.match(HLangParser.RP)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamlistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HLangParser.ParamContext)
            else:
                return self.getTypedRuleContext(HLangParser.ParamContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(HLangParser.COMMA)
            else:
                return self.getToken(HLangParser.COMMA, i)

        def getRuleIndex(self):
            return HLangParser.RULE_paramlist




    def paramlist(self):

        localctx = HLangParser.ParamlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_paramlist)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 158
            self.param()
            self.state = 163
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==43:
                self.state = 159
                self.match(HLangParser.COMMA)
                self.state = 160
                self.param()
                self.state = 165
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(HLangParser.ID, 0)

        def COLON(self):
            return self.getToken(HLangParser.COLON, 0)

        def var_type(self):
            return self.getTypedRuleContext(HLangParser.Var_typeContext,0)


        def getRuleIndex(self):
            return HLangParser.RULE_param




    def param(self):

        localctx = HLangParser.ParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_param)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 166
            self.match(HLangParser.ID)
            self.state = 167
            self.match(HLangParser.COLON)
            self.state = 168
            self.var_type()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LCP(self):
            return self.getToken(HLangParser.LCP, 0)

        def RCP(self):
            return self.getToken(HLangParser.RCP, 0)

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HLangParser.StmtContext)
            else:
                return self.getTypedRuleContext(HLangParser.StmtContext,i)


        def getRuleIndex(self):
            return HLangParser.RULE_body




    def body(self):

        localctx = HLangParser.BodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_body)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 170
            self.match(HLangParser.LCP)
            self.state = 174
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 1058421677618644) != 0):
                self.state = 171
                self.stmt()
                self.state = 176
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 177
            self.match(HLangParser.RCP)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vardecl(self):
            return self.getTypedRuleContext(HLangParser.VardeclContext,0)


        def assignment(self):
            return self.getTypedRuleContext(HLangParser.AssignmentContext,0)


        def callstmt(self):
            return self.getTypedRuleContext(HLangParser.CallstmtContext,0)


        def returnstmt(self):
            return self.getTypedRuleContext(HLangParser.ReturnstmtContext,0)


        def breakstmt(self):
            return self.getTypedRuleContext(HLangParser.BreakstmtContext,0)


        def continuestmt(self):
            return self.getTypedRuleContext(HLangParser.ContinuestmtContext,0)


        def if_stmt(self):
            return self.getTypedRuleContext(HLangParser.If_stmtContext,0)


        def while_stmt(self):
            return self.getTypedRuleContext(HLangParser.While_stmtContext,0)


        def for_stmt(self):
            return self.getTypedRuleContext(HLangParser.For_stmtContext,0)


        def exprstmt(self):
            return self.getTypedRuleContext(HLangParser.ExprstmtContext,0)


        def blockstmt(self):
            return self.getTypedRuleContext(HLangParser.BlockstmtContext,0)


        def getRuleIndex(self):
            return HLangParser.RULE_stmt




    def stmt(self):

        localctx = HLangParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_stmt)
        try:
            self.state = 190
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 179
                self.vardecl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 180
                self.assignment()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 181
                self.callstmt()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 182
                self.returnstmt()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 183
                self.breakstmt()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 184
                self.continuestmt()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 185
                self.if_stmt()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 186
                self.while_stmt()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 187
                self.for_stmt()
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 188
                self.exprstmt()
                pass

            elif la_ == 11:
                self.enterOuterAlt(localctx, 11)
                self.state = 189
                self.blockstmt()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BreakstmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BREAK(self):
            return self.getToken(HLangParser.BREAK, 0)

        def SEMICOLON(self):
            return self.getToken(HLangParser.SEMICOLON, 0)

        def getRuleIndex(self):
            return HLangParser.RULE_breakstmt




    def breakstmt(self):
